# sworndisk-oscomp

./: LICENSE.BSD-3-Clause  README.md
docs/c/: SwornDisk-Linux-C-Documentation.md  sworndisk-linux-c-compile-and-run.md  sworndisk-linux-c-modules.md
docs/rust/: compile-and-run.md  project-design.md
docs/rust/implementation-details/: Makefile  sworndisk.tex
src/rust/: rust-for-linux-modification.patch
src/rust/sworndisk/: .Module.symvers.cmd  .dm-sworndisk.d  .dm-sworndisk.ko.cmd  .dm-sworndisk.lto.o.cmd  .dm-sworndisk.mod.cmd  .dm-sworndisk.mod.o.cmd  .dm-sworndisk.o.cmd  .gitignore  .modules.order.cmd  Cargo.toml  Kbuild  Makefile  dm-sworndisk.ko  dm-sworndisk.mod  dm-sworndisk.mod.c  modules.order  sworndisk-demo.sh
src/rust/sworndisk/dm-sworndisk/: Cargo.toml
src/rust/sworndisk/dm-sworndisk/src/: constant.rs  context.rs  handler.rs  lib.rs  prelude.rs  rw.rs  types.rs  unittest.rs
src/rust/sworndisk/dm-sworndisk/src/regions/: mod.rs  superblock.rs
src/rust/sworndisk/dm-sworndisk/src/regions/checkpoint/: bitc.rs  dst.rs  mod.rs  svt.rs
src/rust/sworndisk/dm-sworndisk/src/regions/data/: mod.rs  segment.rs
src/rust/sworndisk/dm-sworndisk/src/regions/index/: bit.rs  memtable.rs  mod.rs  record.rs  segment.rs
src/rust/sworndisk/dm-sworndisk/src/utils/: bitmap.rs  linked_list.rs  mod.rs  traits.rs
src/rust/sworndisk/dm-sworndisk/src/workers/: compaction.rs  io.rs  mod.rs
sworndisk-linux-rs/: Cargo.toml  README.md
sworndisk-linux-rs/.cargo/: config.toml
sworndisk-linux-rs/dm-sworndisk/src/: context.rs
sworndisk-linux-rs/scripts/: restore.sh
(+11 files in other folders)
