[package]
name = "dm-sworndisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-work = { path = "../deps/async-work" }
crypto = { path = "../deps/crypto" }
device-mapper = { path = "../deps/device-mapper" }
